<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context=".fragments.TaskDetails">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#111111"
            android:text="@string/task_detalis"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal|center_vertical"/>


        <Button
        android:id="@+id/updateTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:text="Update"
        android:layout_gravity="center_horizontal|center_vertical"/>

    </LinearLayout>


    <ScrollView
        android:id="@+id/taskDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:id="@+id/detailTaskView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_hint"
                android:textIsSelectable="true"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:textColor="#111111"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:padding="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_hint"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:textColor="#111111"
                android:textIsSelectable="true"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/order_id"
                android:padding="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orderId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_hint"
                android:textIsSelectable="true"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/country"
                android:padding="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_hint"
                android:textIsSelectable="true"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/currency"
                android:padding="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/currencySpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_hint"
                android:textIsSelectable="true"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:padding="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_hint"
                android:textIsSelectable="true"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/word_count"
                android:padding="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/wordCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_hint"
                android:textIsSelectable="true"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/invoice_amount"
                android:padding="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/invoiceAmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_hint"
                android:textIsSelectable="true"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/created_on"
                android:padding="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_hint"
                android:textIsSelectable="true"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fbase_id"
                android:padding="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fBaseId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_hint"
                android:textIsSelectable="true"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_status"
                android:padding="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/taskStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_hint"
                android:textIsSelectable="true"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txn_id"
                android:padding="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txn_id_td"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="No Transaction"
                android:textIsSelectable="true"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/remarks"
                android:padding="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/remarks_td"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="No Transaction"
                android:textIsSelectable="true"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:textColor="#000000"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>