<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="222dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/main_icon" />

    <Button
        android:id="@+id/addTask"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_green_dark"
        android:drawableRight="@drawable/plus_icon"
        android:onClick="addTask"
        android:padding="10dp"
        android:text="@string/add_task"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.539"
        tools:text="Add Task" />

    <Button
        android:id="@+id/manageTasks"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_green_dark"
        android:drawableRight="@drawable/tick_icon"
        android:onClick="tasksCompleted"
        android:padding="10dp"
        android:text="@string/manage_task"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/findTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTask"
        tools:text="Manage Tasks" />

    <Button
        android:id="@+id/findTask"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_green_dark"
        android:drawableRight="@drawable/find_icon"
        android:onClick="findTask"
        android:padding="10dp"
        android:text="@string/find_all_task"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manageTasks"
        tools:text="Task Finder" />

</android.support.constraint.ConstraintLayout>